Compiles. Barely. TODO: everything else