@@ -1,49 +1,37 @@
 package vazkii.patchouli.client.book.page;
 
-import net.minecraft.client.gui.AbstractGui;
 import com.mojang.blaze3d.platform.GlStateManager;
+
+import net.minecraft.client.gui.AbstractGui;
 import net.minecraft.item.ItemStack;
-import net.minecraft.item.crafting.FurnaceRecipes;
-import net.minecraft.util.Tuple;
-import vazkii.patchouli.client.book.BookEntry;
+import net.minecraft.item.crafting.AbstractCookingRecipe;
 import vazkii.patchouli.client.book.gui.GuiBook;
-import vazkii.patchouli.client.book.page.abstr.PageDoubleRecipe;
-import vazkii.patchouli.common.util.ItemStackUtil;
+import vazkii.patchouli.client.book.page.abstr.PageDoubleRecipeRegistry;
 
-public class PageSmelting extends PageDoubleRecipe<Tuple<ItemStack, ItemStack>> {
+public class PageSmelting extends PageDoubleRecipeRegistry<AbstractCookingRecipe> {
 
+	public PageSmelting() {
+		super(AbstractCookingRecipe.class);
+	}
+	
     @Override
-    protected void drawRecipe(Tuple<ItemStack, ItemStack> recipe, int recipeX, int recipeY, int mouseX, int mouseY, boolean second) {
-        mc.renderEngine.bindTexture(book.craftingResource);
+    protected void drawRecipe(AbstractCookingRecipe recipe, int recipeX, int recipeY, int mouseX, int mouseY, boolean second) {
+        mc.textureManager.bindTexture(book.craftingResource);
         GlStateManager.enableBlend();
-        AbstractGui.drawModalRectWithCustomSizedTexture(recipeX, recipeY, 11, 71, 96, 24, 128, 128);
+        AbstractGui.blit(recipeX, recipeY, 11, 71, 96, 24, 128, 128);
         parent.drawCenteredStringNoShadow(getTitle(second), GuiBook.PAGE_WIDTH / 2, recipeY - 10, book.headerColor);
 
-        parent.renderItemStack(recipeX + 4, recipeY + 4, mouseX, mouseY, recipe.getFirst());
-        parent.renderItemStack(recipeX + 76, recipeY + 4, mouseX, mouseY, recipe.getSecond());
+        parent.renderIngredient(recipeX + 4, recipeY + 4, mouseX, mouseY, recipe.getIngredients().get(0));
+        parent.renderItemStack(recipeX + 76, recipeY + 4, mouseX, mouseY, recipe.getRecipeOutput());
     }
 
-    @Override
-    protected Tuple<ItemStack, ItemStack> loadRecipe(BookEntry entry, String loc) {
-        if (loc != null) {
-            ItemStack stack = ItemStackUtil.loadStackFromString(loc);
-            if (!stack.isEmpty()) {
-                ItemStack output = FurnaceRecipes.instance().getSmeltingResult(stack);
-                if (!output.isEmpty()) {
-                    entry.addRelevantStack(output, pageNum);
-                    return new Tuple<>(stack, output);
-                }
-            }
-        }
-        return null;
-    }
 
     @Override
-    protected ItemStack getRecipeOutput(Tuple<ItemStack, ItemStack> recipe) {
+    protected ItemStack getRecipeOutput(AbstractCookingRecipe recipe) {
         if (recipe == null)
             return ItemStack.EMPTY;
         
-        return recipe.getSecond();
+        return recipe.getRecipeOutput();
     }
 
     @Override
